--- a/res/layout/qr_code_fragment.xml
+++ b/res/layout/qr_code_fragment.xml
@@ -4,9 +4,9 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <TextView
+    <in.eigene.qrwifi.widgets.CondensedTextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="History"
+            android:text="QR Code Here"
             />
 </LinearLayout>
