--- a/res/layout/qr_code_fragment.xml
+++ b/res/layout/qr_code_fragment.xml
@@ -3,11 +3,12 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="@color/background_holo_light"
+              android:background="@android:color/white"
         >
     <in.eigene.qrwifi.widgets.CondensedTextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="QR Code Here"
+            android:textColor="@android:color/darker_gray"
             />
 </LinearLayout>
