--- a/res/layout/drawer_item.xml
+++ b/res/layout/drawer_item.xml
@@ -4,7 +4,7 @@
               android:layout_width="fill_parent"
               android:layout_height="48dp"
 >
-    <in.eigene.miary.widgets.CondensedTextView
+    <TextView
             android:id="@+id/drawer_item_title"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
