--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -10,6 +10,10 @@
             android:id="@+id/content_frame"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
     />
     <!-- The navigation drawer. -->
     <ListView
