#27 #28 Note fragment and activity

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="drawer_titles">
-        <item>Current network</item>
-        <item>Known networks</item>
-        <item>History</item>
+        <item>Feed</item>
+        <item>Starred</item>
+        <item>Drafts</item>
     </string-array>
 </resources>
