--- a/res/layout/note_activity.xml
+++ b/res/layout/note_activity.xml
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
->
-    <!-- The main content view. -->
+        >
     <FrameLayout
-            android:id="@+id/feed_content_frame"
+            android:id="@+id/note_content_frame"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
-    />
-    <!-- The navigation drawer. -->
-    <ListView
-            android:id="@+id/drawer"
-            android:layout_width="@dimen/navigation_drawer_width"
-            android:layout_height="fill_parent"
-            android:layout_gravity="start"
-            android:choiceMode="singleChoice"
-            android:background="@android:color/background_light"
-    />
-</android.support.v4.widget.DrawerLayout>
+            />
+</LinearLayout>
