--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="navigation_drawer_width">240dp</dimen>
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">8dp</dimen>
+    <dimen name="feed_item_margin">8dp</dimen>
 </resources>
