#4 Working on note color

--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style
-            name="Miary.Theme.Application"
-            parent="android:Theme.Holo.Light"
-    >
+    <style name="Miary.Theme.Application" parent="android:Theme.Holo.Light">
+    </style>
+    <style name="Miary.Theme.Dialog" parent="@android:style/Theme.Dialog">
     </style>
 </resources>
