--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="note_edit_text_padding">8dp</dimen>
     <dimen name="note_fragment_padding">16dp</dimen>
     <dimen name="feed_item_separator_height">16dp</dimen>
+    <dimen name="choose_color_circle_size">36dp</dimen>
+    <dimen name="choose_color_circle_margin">8dp</dimen>
+    <dimen name="choose_color_dialog_padding">16dp</dimen>
 </resources>
