Close #4: note colors implemented

--- a/res/layout/choose_color_fragment.xml
+++ b/res/layout/choose_color_fragment.xml
@@ -1,24 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
+              android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:paddingLeft="@dimen/choose_color_dialog_padding"
-              android:paddingRight="@dimen/choose_color_dialog_padding"
-              android:paddingBottom="@dimen/choose_color_dialog_padding"
+              android:padding="@dimen/choose_color_dialog_padding"
+              android:gravity="center"
 >
-    <ImageView
-            android:id="@+id/choose_color_white"
-            android:layout_width="@dimen/choose_color_circle_size"
-            android:layout_height="@dimen/choose_color_circle_size"
-            android:src="@drawable/color_circle_white"
-            android:layout_margin="@dimen/choose_color_circle_margin"
-    />
-    <ImageView
-            android:id="@+id/choose_color_green"
-            android:layout_width="@dimen/choose_color_circle_size"
-            android:layout_height="@dimen/choose_color_circle_size"
-            android:src="@drawable/color_circle_green"
-            android:layout_margin="@dimen/choose_color_circle_margin"
-    />
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+    >
+        <ImageView
+                android:id="@+id/choose_color_white"
+                android:layout_width="@dimen/choose_color_circle_size"
+                android:layout_height="@dimen/choose_color_circle_size"
+                android:src="@drawable/color_circle_white"
+                android:layout_margin="@dimen/choose_color_circle_margin"
+        />
+        <ImageView
+                android:id="@+id/choose_color_blue"
+                android:layout_width="@dimen/choose_color_circle_size"
+                android:layout_height="@dimen/choose_color_circle_size"
+                android:src="@drawable/color_circle_blue"
+                android:layout_margin="@dimen/choose_color_circle_margin"
+        />
+        <ImageView
+                android:id="@+id/choose_color_violet"
+                android:layout_width="@dimen/choose_color_circle_size"
+                android:layout_height="@dimen/choose_color_circle_size"
+                android:src="@drawable/color_circle_violet"
+                android:layout_margin="@dimen/choose_color_circle_margin"
+        />
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+    >
+        <ImageView
+                android:id="@+id/choose_color_green"
+                android:layout_width="@dimen/choose_color_circle_size"
+                android:layout_height="@dimen/choose_color_circle_size"
+                android:src="@drawable/color_circle_green"
+                android:layout_margin="@dimen/choose_color_circle_margin"
+        />
+        <ImageView
+                android:id="@+id/choose_color_orange"
+                android:layout_width="@dimen/choose_color_circle_size"
+                android:layout_height="@dimen/choose_color_circle_size"
+                android:src="@drawable/color_circle_orange"
+                android:layout_margin="@dimen/choose_color_circle_margin"
+        />
+        <ImageView
+                android:id="@+id/choose_color_red"
+                android:layout_width="@dimen/choose_color_circle_size"
+                android:layout_height="@dimen/choose_color_circle_size"
+                android:src="@drawable/color_circle_red"
+                android:layout_margin="@dimen/choose_color_circle_margin"
+        />
+    </LinearLayout>
 </LinearLayout>
