--- a/res/layout/note_fragment.xml
+++ b/res/layout/note_fragment.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/note_edit_layout"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="@android:color/white"
               android:padding="@dimen/note_fragment_padding"
               android:focusableInTouchMode="true"
 ><!-- http://stackoverflow.com/a/8639921/359730 -->
