--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="orange_dark">#FF8800</color>
     <color name="red_light">#FF4444</color>
     <color name="red_dark">#CC0000</color>
+    <color name="yellow_light">#FFFF44</color>
+    <color name="yellow_dark">#dd0</color>
 </resources>
