--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,13 +6,13 @@
     <color name="darker_gray">#aaa</color>
     <color name="green_light">#99CC00</color>
     <color name="green_dark">#669900</color>
-    <color name="blue_light">#33B5E5</color>
+    <color name="blue_light">#6DCAEC</color>
     <color name="blue_dark">#0099CC</color>
-    <color name="violet_light">#AA66CC</color>
+    <color name="violet_light">#BA75DC</color>
     <color name="violet_dark">#9933CC</color>
     <color name="orange_light">#FFBB33</color>
     <color name="orange_dark">#FF8800</color>
-    <color name="red_light">#FF4444</color>
+    <color name="red_light">#FF5F5F</color>
     <color name="red_dark">#CC0000</color>
     <color name="yellow_light">#FFFF44</color>
     <color name="yellow_dark">#dd0</color>
