#54 Menu item, listener and finishing activity (without actual removing)

--- a/res/menu/note.xml
+++ b/res/menu/note.xml
@@ -6,4 +6,9 @@
             android:title="@string/note_color"
             android:showAsAction="always"
     />
+    <item
+            android:id="@+id/menu_item_note_remove"
+            android:title="@string/note_remove"
+            android:showAsAction="never"
+    />
 </menu>
