--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,5 +4,6 @@
             android:id="@+id/menu_item_options"
             android:title="@string/options"
             android:showAsAction="never"
+            android:menuCategory="secondary"
     />
 </menu>
