--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="background_holo_light">#fff3f3f3</color>
+    <color name="background_holo_light_transparent">#00f3f3f3</color>
     <color name="lighter_gray">#ddd</color>
     <color name="hint_foreground_light">#808080</color>
     <color name="darker_gray">#aaa</color>
