--- a/res/layout/drawer_item.xml
+++ b/res/layout/drawer_item.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="fill_parent"
-              android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:gravity="center_vertical"
+        android:clickable="true"
+        android:background="?android:attr/selectableItemBackground"
 >
+    <ImageView
+            android:id="@+id/drawer_item_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+    />
     <TextView
             android:id="@+id/drawer_item_title"
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="16dp"
-            android:gravity="center_vertical"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            style="@android:style/TextAppearance.Medium"
+            android:layout_weight="1"
+    />
+    <TextView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/drawer_counter"
+            android:textColor="@android:color/white"
+            android:text="7"
+            android:gravity="center"
+            style="@android:style/TextAppearance.Medium"
     />
 </LinearLayout>
