--- a/res/menu/note.xml
+++ b/res/menu/note.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+            android:id="@+id/menu_item_note_starred"
+            android:icon="@drawable/ic_starred"
+            android:title="@string/note_unstar"
+            android:showAsAction="always"
+            android:visible="false"
+    />
+    <item
+            android:id="@+id/menu_item_note_not_starred"
+            android:icon="@drawable/ic_not_starred"
+            android:title="@string/note_star"
+            android:showAsAction="always"
+            android:visible="false"
+    />
+    <item
             android:id="@+id/menu_item_note_color"
             android:icon="@drawable/ic_colorpicker_dark"
             android:title="@string/note_color"
