--- a/res/layout/drawer_item.xml
+++ b/res/layout/drawer_item.xml
@@ -21,6 +21,7 @@
             android:layout_weight="1"
     />
     <TextView
+            android:id="@+id/drawer_item_counter"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_margin="8dp"
