--- a/res/layout/drawer_item.xml
+++ b/res/layout/drawer_item.xml
@@ -27,8 +27,8 @@
             android:layout_margin="8dp"
             android:background="@drawable/drawer_counter"
             android:textColor="@android:color/white"
-            android:text="7"
             android:gravity="center"
+            android:visibility="gone"
             style="@android:style/TextAppearance.Medium"
     />
 </LinearLayout>
