--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -5,5 +5,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
 >
-
+    <fragment android:name="in.eigene.miary.fragments.SettingsFragment"
+              android:id="@+id/fragment_settings"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+    />
 </LinearLayout>
