--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <Preference
             android:title="@string/preference_title_export"
-            android:key="export"
+            android:key="@string/prefkey_export"
             android:summary="@string/preference_summary_export"
     />
 </PreferenceScreen>
