--- a/res/layout/activity_note.xml
+++ b/res/layout/activity_note.xml
@@ -4,10 +4,10 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
-    <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+>
+    <fragment android:name="in.eigene.miary.fragments.NoteFragment"
+              android:id="@+id/fragment_note"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
     />
 </LinearLayout>
