--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -6,13 +6,12 @@
         android:layout_height="match_parent"
         android:background="@color/background_holo_light"
 >
-    <!-- The main content view. -->
-    <FrameLayout
-            android:id="@+id/feed_content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingLeft="@dimen/activity_horizontal_padding"
-            android:paddingRight="@dimen/activity_horizontal_padding"
+    <fragment android:name="in.eigene.miary.fragments.FeedFragment"
+              android:id="@+id/fragment_feed"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_marginLeft="@dimen/feed_horizontal_margin"
+              android:layout_marginRight="@dimen/feed_horizontal_margin"
     />
     <!-- Navigation drawer. -->
     <LinearLayout
