--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="navigation_drawer_width">240dp</dimen>
-    <dimen name="activity_horizontal_padding">8dp</dimen>
-    <dimen name="activity_vertical_padding">8dp</dimen>
+    <dimen name="feed_horizontal_margin">8dp</dimen>
     <dimen name="note_edit_text_padding">8dp</dimen>
     <dimen name="note_fragment_padding">16dp</dimen>
     <dimen name="choose_color_circle_size">44dp</dimen>
