--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,8 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <Preference
-            android:title="@string/preference_title_export"
-            android:key="@string/prefkey_export"
-            android:summary="@string/preference_summary_export"
-    />
+    <PreferenceCategory
+            android:title="@string/prefcat_title_security"
+            android:key="prefcat_security"
+    >
+        <CheckBoxPreference
+                android:title="@string/preference_title_pin_enabled"
+                android:key="@string/prefkey_pin_enabled"
+                android:summary="@string/preference_summary_pin"
+                android:defaultValue="false"
+        />
+    </PreferenceCategory>
+    <PreferenceCategory
+            android:title="@string/prefcat_title_substitution"
+            android:key="prefcat_substitution"
+    >
+        <CheckBoxPreference
+                android:title="@string/preference_title_enabled"
+                android:key="@string/prefkey_substitution_enabled"
+                android:summary="@string/preference_summary_substitution"
+                android:defaultValue="true"
+        />
+        <Preference
+                android:title="@string/preference_title_substitution_list"
+                android:key="@string/prefkey_substitution_list"
+        />
+    </PreferenceCategory>
+    <PreferenceCategory
+            android:title="@string/prefcat_title_account"
+            android:key="prefcat_account"
+    >
+        <Preference
+                android:title="@string/preference_title_export"
+                android:key="@string/prefkey_export"
+                android:summary="@string/preference_summary_export"
+        />
+    </PreferenceCategory>
 </PreferenceScreen>
