--- a/res/menu/note.xml
+++ b/res/menu/note.xml
@@ -31,6 +31,11 @@
             android:showAsAction="never"
     />
     <item
+            android:id="@+id/menu_item_note_custom_date"
+            android:title="@string/note_set_custom_date"
+            android:showAsAction="never"
+    />
+    <item
             android:id="@+id/menu_item_note_remove"
             android:title="@string/note_remove"
             android:showAsAction="never"
