--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -15,12 +15,22 @@
             android:title="@string/prefcat_title_reminder"
             android:key="prefcat_reminder"
     >
-        <CheckBoxPreference
-                android:title="@string/preference_title_enabled"
-                android:key="@string/prefkey_reminder_enabled"
-                android:summary="@string/preference_summary_reminder"
-                android:defaultValue="false"
+        <MultiSelectListPreference
+                android:dialogTitle="@string/dialog_reminder_days_title"
+                android:key="@string/prefkey_reminder_days"
+                android:summary="@string/preference_summary_reminder_days"
+                android:title="@string/preference_title_reminder_days"
+                android:entries="@array/weekdays"
+                android:entryValues="@array/weekdays_values"
+                android:defaultValue="@array/empty_array"
         />
+
+        <Preference
+            android:title="@string/preference_title_reminder_time"
+            android:key="@string/prefkey_reminder_time"
+            android:summary="@string/preference_summary_reminder_time"
+        />
+
     </PreferenceCategory>
     <PreferenceCategory
             android:title="@string/prefcat_title_substitution"
