--- a/res/layout/activity_note.xml
+++ b/res/layout/activity_note.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawer_layout"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
@@ -9,5 +11,6 @@
               android:id="@+id/fragment_note"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              tools:layout="@layout/fragment_note"
     />
 </LinearLayout>
