--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="choose_color_dialog_padding">20dp</dimen>
     <dimen name="feed_item_separator_height">16dp</dimen>
     <dimen name="feed_item_margin">8dp</dimen>
+    <dimen name="launcher_icon_size">48dp</dimen>
 </resources>
