--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -43,16 +43,32 @@
         <Preference
                 android:title="@string/preference_title_substitution_table"
                 android:key="@string/prefkey_substitution_table"
+                android:persistent="false"
         />
     </PreferenceCategory>
     <PreferenceCategory
-            android:title="@string/prefcat_title_account"
+            android:title="@string/prefcat_title_backup_and_restore"
             android:key="prefcat_account"
     >
-        <Preference
-                android:title="@string/preference_title_export"
-                android:key="@string/prefkey_export"
-                android:summary="@string/preference_summary_export"
-        />
+        <PreferenceScreen
+                android:title="@string/preference_title_backup"
+                android:key="@string/prefkey_backup"
+                android:summary="@string/preference_summary_backup"
+                android:persistent="false"
+        >
+            <Preference
+                    android:title="@string/preference_title_backup_plain_text"
+                    android:key="@string/prefkey_backup_plain_text"
+                    android:summary="@string/preference_summary_backup_plain_text"
+                    android:persistent="false"
+            />
+        </PreferenceScreen>
+        <PreferenceScreen
+                android:title="@string/preference_title_restore"
+                android:key="@string/prefkey_restore"
+                android:summary="@string/preference_summary_restore"
+                android:persistent="false"
+        >
+        </PreferenceScreen>
     </PreferenceCategory>
 </PreferenceScreen>
