--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -62,6 +62,12 @@
                     android:summary="@string/preference_summary_backup_plain_text"
                     android:persistent="false"
             />
+            <Preference
+                    android:title="@string/preference_title_backup_json"
+                    android:key="@string/prefkey_backup_json"
+                    android:summary="@string/preference_summary_backup_json"
+                    android:persistent="false"
+            />
         </PreferenceScreen>
         <PreferenceScreen
                 android:title="@string/preference_title_restore"
