--- a/res/menu/note_activity.xml
+++ b/res/menu/note_activity.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
             android:id="@+id/menu_item_note_fullscreen"
+            android:icon="@drawable/ic_action_full_screen"
             android:title="@string/note_fullscreen"
-            android:showAsAction="never"
+            android:showAsAction="ifRoom"
     />
 </menu>
