--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -81,6 +81,12 @@
                 android:summary="@string/preference_summary_restore"
                 android:persistent="false"
         >
+            <Preference
+                    android:title="@string/preference_title_restore_dropbox"
+                    android:key="@string/prefkey_restore_dropbox"
+                    android:summary="@string/preference_summary_restore_dropbox"
+                    android:persistent="false"
+            />
         </PreferenceScreen>
     </PreferenceCategory>
 </PreferenceScreen>
