--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -87,6 +87,12 @@
                     android:summary="@string/preference_summary_restore_dropbox"
                     android:persistent="false"
             />
+            <Preference
+                    android:title="@string/preference_title_restore_json"
+                    android:key="@string/prefkey_restore_json"
+                    android:summary="@string/preference_summary_restore_json"
+                    android:persistent="false"
+            />
         </PreferenceScreen>
     </PreferenceCategory>
 </PreferenceScreen>
