--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -20,12 +20,12 @@
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@android:color/background_light"
+            android:background="@color/background_holo_light"
     >
         <include android:id="@+id/drawer_item_feed" layout="@layout/drawer_item"/>
-        <include layout="@layout/divider_horizontal_holo_light"/>
+        <include layout="@layout/drawer_divider"/>
         <include android:id="@+id/drawer_item_starred" layout="@layout/drawer_item"/>
-        <include layout="@layout/divider_horizontal_holo_light"/>
+        <include layout="@layout/drawer_divider"/>
         <include android:id="@+id/drawer_item_drafts" layout="@layout/drawer_item"/>
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
