--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background_holo_light">#fff3f3f3</color>
     <color name="background_holo_light_transparent">#00f3f3f3</color>
     <color name="lighter_gray">#ddd</color>
-    <color name="hint_foreground_light">#808080</color>
     <color name="darker_gray">#aaa</color>
+    <color name="hint_foreground_light">#808080</color>
+    <!-- Standard Android colors. -->
+    <color name="background_holo_light">#fff3f3f3</color>
+    <color name="holo_blue_light">#ff33b5e5</color>
+    <!-- Standard note colors. -->
     <color name="green_light">#99CC00</color>
     <color name="green_dark">#669900</color>
     <color name="blue_light">#6DCAEC</color>
     <color name="blue_dark">#0099CC</color>
-    <color name="counter_background">#5490CC</color>
     <color name="violet_light">#BA75DC</color>
     <color name="violet_dark">#9933CC</color>
     <color name="orange_light">#FFBB33</color>
@@ -18,4 +20,5 @@
     <color name="red_dark">#CC0000</color>
     <color name="yellow_light">#FFFF44</color>
     <color name="yellow_dark">#dd0</color>
+    <color name="drawer_text_color">#5c5c5c</color>
 </resources>
