--- a/res/drawable/drawer_item_background.xml
+++ b/res/drawable/drawer_item_background.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@color/holo_blue_light"/>
     <item android:state_focused="true" android:drawable="@color/holo_blue_light"/>
-    <item android:drawable="@android:color/transparent"/>
+    <item android:drawable="@drawable/ic_drawer_divider"/>
 </selector>
