--- a/res/layout/drawer_item.xml
+++ b/res/layout/drawer_item.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_weight="1"
-            android:textColor="@color/drawer_text_color"
+            android:textColor="@color/dark_gray_text_color"
             style="@android:style/TextAppearance.Medium"
     />
     <TextView
@@ -22,7 +22,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:visibility="gone"
-            android:textColor="@color/drawer_text_color"
+            android:textColor="@color/dark_gray_text_color"
             style="@android:style/TextAppearance.Small"
     />
 </LinearLayout>
