--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="lighter_gray">#ddd</color>
     <color name="darker_gray">#aaa</color>
     <color name="hint_foreground_light">#808080</color>
+    <!-- Gmail -->
+    <color name="dark_gray_text_color">#ff58585b</color>
     <!-- Standard Android colors. -->
     <color name="background_holo_light">#fff3f3f3</color>
     <color name="holo_blue_light">#ff33b5e5</color>
@@ -20,5 +22,4 @@
     <color name="red_dark">#CC0000</color>
     <color name="yellow_light">#FFFF44</color>
     <color name="yellow_dark">#dd0</color>
-    <color name="drawer_text_color">#5c5c5c</color>
 </resources>
