--- a/res/layout/drawer_item.xml
+++ b/res/layout/drawer_item.xml
@@ -10,7 +10,7 @@
             android:id="@+id/drawer_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/drawer_item_margin"
             android:layout_weight="1"
             android:textColor="@color/dark_gray_text_color"
             style="@android:style/TextAppearance.Medium"
@@ -19,8 +19,8 @@
             android:id="@+id/drawer_item_counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginLeft="@dimen/drawer_item_margin"
+            android:layout_marginRight="@dimen/drawer_item_margin"
             android:visibility="gone"
             android:textColor="@color/dark_gray_text_color"
             style="@android:style/TextAppearance.Small"
