--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="hint_foreground_light">#808080</color>
     <!-- Gmail -->
     <color name="dark_gray_text_color">#ff58585b</color>
+    <color name="separator_color">#ffbebebe</color>
     <!-- Standard Android colors. -->
     <color name="background_holo_light">#fff3f3f3</color>
     <color name="holo_blue_light">#ff33b5e5</color>
