--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="choose_color_circle_margin">4dp</dimen>
+    <dimen name="choose_color_circle_size">44dp</dimen>
+    <dimen name="choose_color_dialog_padding">20dp</dimen>
+    <dimen name="drawer_item_margin">16dp</dimen>
     <dimen name="feed_horizontal_margin">8dp</dimen>
+    <dimen name="feed_item_margin">8dp</dimen>
+    <dimen name="feed_item_separator_height">16dp</dimen>
+    <dimen name="launcher_icon_size">48dp</dimen>
+    <dimen name="navigation_drawer_width">300dp</dimen>
     <dimen name="note_edit_text_padding">8dp</dimen>
     <dimen name="note_fragment_padding">16dp</dimen>
-    <dimen name="choose_color_circle_size">44dp</dimen>
-    <dimen name="choose_color_circle_margin">4dp</dimen>
-    <dimen name="choose_color_dialog_padding">20dp</dimen>
-    <dimen name="feed_item_separator_height">16dp</dimen>
-    <dimen name="feed_item_margin">8dp</dimen>
-    <dimen name="launcher_icon_size">48dp</dimen>
 </resources>
