--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -48,18 +48,16 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sign In"
+                        android:text="@string/drawer_sign_in"
                         android:textStyle="bold"
                         style="@android:style/TextAppearance.Medium"
                 />
-                <!--
-                TODO: future features.
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Basic account"
+                        android:text="@string/drawer_basic_account"
                         style="@android:style/TextAppearance.Small"
-                />-->
+                />
             </LinearLayout>
         </LinearLayout>
 
