Comment out Account Info in drawer as we need to release hotfix.

--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -24,6 +24,8 @@
             android:background="@color/background_holo_light"
             android:clickable="true"
     >
+        <!--
+        TODO: future features.
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -59,7 +61,7 @@
                         style="@android:style/TextAppearance.Small"
                 />
             </LinearLayout>
-        </LinearLayout>
+        </LinearLayout>-->
 
         <include android:id="@+id/drawer_item_feed" layout="@layout/drawer_item"/>
         <include android:id="@+id/drawer_item_starred" layout="@layout/drawer_item"/>
