--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -24,8 +24,6 @@
             android:background="@color/background_holo_light"
             android:clickable="true"
     >
-        <!--
-        TODO: future features.
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,7 +59,7 @@
                         style="@android:style/TextAppearance.Small"
                 />
             </LinearLayout>
-        </LinearLayout>-->
+        </LinearLayout>
 
         <include android:id="@+id/drawer_item_feed" layout="@layout/drawer_item"/>
         <include android:id="@+id/drawer_item_starred" layout="@layout/drawer_item"/>
