--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -25,6 +25,7 @@
             android:clickable="true"
     >
         <LinearLayout
+                android:id="@+id/account_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
