--- a/res/menu/note_fragment.xml
+++ b/res/menu/note_fragment.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+        xmlns:android="http://schemas.android.com/apk/res/android"
+>
     <item
             android:id="@+id/menu_item_note_starred"
             android:icon="@drawable/ic_starred"
@@ -19,6 +21,12 @@
             android:icon="@drawable/ic_colorpicker_dark"
             android:title="@string/note_color"
             android:showAsAction="ifRoom"
+    />
+    <item
+            android:id="@+id/menu_item_note_share"
+            android:icon="@android:drawable/ic_menu_share"
+            android:showAsAction="ifRoom"
+            android:title="@string/note_share"
     />
     <item
             android:id="@+id/menu_item_note_draft"
