--- a/res/menu/note_fragment.xml
+++ b/res/menu/note_fragment.xml
@@ -5,21 +5,21 @@
 >
     <item
             android:id="@+id/menu_item_note_starred"
-            android:icon="@drawable/ic_starred"
+            android:icon="@drawable/ic_star_white_24dp"
             android:title="@string/note_unstar"
             android:visible="false"
             app:showAsAction="ifRoom"
     />
     <item
             android:id="@+id/menu_item_note_not_starred"
-            android:icon="@drawable/ic_not_starred"
+            android:icon="@drawable/ic_star_outline_white_24dp"
             android:title="@string/note_star"
-            android:visible="false"
+            android:visible="true"
             app:showAsAction="ifRoom"
     />
     <item
             android:id="@+id/menu_item_note_color"
-            android:icon="@drawable/ic_colorpicker_dark"
+            android:icon="@drawable/ic_color_lens_white_24dp"
             android:title="@string/note_color"
             app:showAsAction="ifRoom"
     />
