#17 Transparent toolbar on note

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background_holo_light_transparent">#00f3f3f3</color>
-    <color name="lighter_gray">#ddd</color>
-    <color name="darker_gray">#aaa</color>
-    <color name="hint_foreground_light">#808080</color>
+    <!-- Toolbar backgrounds. -->
+    <color name="toolbar_background_note">#43000000</color>
     <!-- Gmail -->
     <color name="dark_gray_text_color">#ff58585b</color>
     <color name="separator_color">#ffbebebe</color>
@@ -23,4 +21,9 @@
     <color name="red_dark">#CC0000</color>
     <color name="yellow_light">#FFFF44</color>
     <color name="yellow_dark">#dd0</color>
+    <!-- Misc. Refactor these. -->
+    <color name="lighter_gray">#ddd</color>
+    <color name="darker_gray">#aaa</color>
+    <color name="background_holo_light_transparent">#00f3f3f3</color>
+    <color name="hint_foreground_light">#808080</color>
 </resources>
