--- a/res/layout/activity_note.xml
+++ b/res/layout/activity_note.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
-    <include layout="@layout/toolbar"/>
     <fragment android:name="in.eigene.miary.fragments.NoteFragment"
               android:id="@+id/fragment_note"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               tools:layout="@layout/fragment_note"
     />
-</LinearLayout>
+    <include layout="@layout/toolbar"/>
+</RelativeLayout>
