--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Miary.Theme.Application" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/toolbar_background_feed</item>
+        <item name="colorPrimary">@color/holo_blue_light</item>
         <item name="colorPrimaryDark">@color/blue_dark</item>
         <item name="android:textColor">@android:color/primary_text_light</item>
         <item name="android:textColorHint">@color/hint_foreground_light</item>
