--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -9,6 +9,7 @@
     <!-- Standard Android colors. -->
     <color name="background_holo_light">#fff3f3f3</color>
     <color name="holo_blue_light">#ff33b5e5</color>
+    <color name="holo_blue_dark">#0099CC</color>
     <!-- Standard note colors. -->
     <color name="green_light">#99CC00</color>
     <color name="green_dark">#669900</color>
