--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -2,8 +2,8 @@
 <resources>
     <style name="Miary.Theme.Application" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/holo_blue_light</item>
-        <item name="colorPrimaryDark">@color/blue_dark</item>
+        <item name="colorPrimaryDark">@color/holo_blue_dark</item>
+        <item name="colorAccent">@color/holo_blue_light</item>
         <item name="android:textColor">@android:color/primary_text_light</item>
-        <item name="android:textColorHint">@color/hint_foreground_light</item>
     </style>
 </resources>
