--- a/res/layout/drawer_item.xml
+++ b/res/layout/drawer_item.xml
@@ -6,14 +6,21 @@
         android:clickable="true"
         android:background="@drawable/drawer_item_background"
 >
+    <ImageView
+            android:id="@+id/drawer_item_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/drawer_item_margin"
+            android:layout_marginRight="@dimen/drawer_item_margin"
+    />
     <TextView
             android:id="@+id/drawer_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/drawer_item_margin"
+            android:layout_marginRight="@dimen/drawer_item_margin"
             android:layout_weight="1"
-            android:textColor="@color/dark_gray_text_color"
-            style="@android:style/TextAppearance.Medium"
+            android:textSize="16dp"
     />
     <TextView
             android:id="@+id/drawer_item_counter"
@@ -23,6 +30,7 @@
             android:layout_marginRight="@dimen/drawer_item_margin"
             android:visibility="gone"
             android:textColor="@color/dark_gray_text_color"
-            style="@android:style/TextAppearance.Small"
+            android:textStyle="bold"
+            android:textSize="14dp"
     />
 </LinearLayout>
